--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="row-fluid">
         <div class="span12">
             <div class="hero-unit">
-                <h1>Cats! Cats! Cats!</h1>
-                <p>Welcome to my simple chart</p>
+                <h1>Street duders</h1>
+                <p>This graph will rule</p>
             </div>
         </div>
     </div>
