added the original story link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="span12">
             <div class="hero-unit">
                 <h1>Street duders</h1>
-                <p>This graph will rule</p>
+                <p>This graph will rule. <a href="http://www.omaha.com/article/20130303/MONEY/703039945/1685">Original story.</a></p>
             </div>
             <div class="street-dude">
                 <div class="top-info">
